[build-system]
requires = ["setuptools"]

[project]
name = "mmzip"
description = "fusion zip"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2025.04.27"
dependencies = [
    'rarfile'
]

[tool.setuptools.packages.find]
exclude = ["build", "tests", "doc"]
